--- a/contact/index.htm
+++ b/contact/index.htm
@@ -7,157 +7,10 @@
     <link rel="manifest" href="../Favicon/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../root_modules/CSS/styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-
     <title>Musfiqur_Jahin>_ SendMessage</title>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            font-family: 'VT323', monospace;
-            background-color: #000;
-            color: #fff;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .content {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 500px;
-            padding: 20px;
-            border: 1px solid #00ff00;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
-            text-align: center;
-        }
-
-        h1 {
-            margin-bottom: 30px;
-            font-size: 36px;
-            color: #00ff00;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #00ff00;
-            border-radius: 5px;
-            background-color: #111;
-            color: #fff;
-        }
-
-        textarea {
-            height: 150px;
-            resize: none;
-        }
-
-        .button, #sendButton {
-            display: block;
-            width: 100%;
-            padding: 15px;
-            background-color: #00ff00;
-            color: #000;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            font-size: 18px;
-            font-family: 'VT323', monospace;
-            transition: background-color 0.3s ease;
-            margin-bottom: 10px;
-        }
-
-        .button:hover, #sendButton:hover {
-            background-color: #00cc00;
-        }
-
-        #response {
-            margin-top: 20px;
-            font-size: 18px;
-        }
-
-        .alert {
-            color: #ff0000;
-            font-size: 16px;
-            margin-top: -10px;
-            margin-bottom: 20px;
-        }
-        #animationContainer {
-            display: none;
-        }
-
-        @keyframes slideIn {
-            from {
-                transform: translateY(-100%);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        .slide-in {
-            animation: slideIn 1s ease-out;
-        }
-
-        .fade-in {
-            animation: fadeIn 1s ease-out;
-        }
-
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .message-page {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-size: 24px;
-            animation: fadeIn 2s ease-out;
-        }
-
-        .message-page button {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #00ff00;
-            color: #000;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            font-size: 18px;
-            font-family: 'VT323', monospace;
-            transition: background-color 0.3s ease;
-        }
-
-        .message-page button:hover {
-            background-color: #00cc00;
-        }
-    </style>
 </head>
 <body>
 <!-- Loader HTML -->
@@ -218,127 +71,7 @@
             </div>
         </div>
     </div>
-    <script>
-        var botToken = '7140485691:AAEELH16oglpLWby66tqhKI9gT_xpMUmXL8';
-        var chatId = '5979932678';
-
-        function startVerification() {
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-            var message = document.getElementById('message').value;
-
-            var nameAlert = document.getElementById('nameAlert');
-            var emailAlert = document.getElementById('emailAlert');
-
-            nameAlert.innerText = '';
-            emailAlert.innerText = '';
-
-            if (!name) {
-                nameAlert.innerText = 'Name is required.';
-                return;
-            }
-
-            if (!email) {
-                emailAlert.innerText = 'Email is required! \n I will send responses to your Email. \n Please, provide it to proceed.';
-                return;
-            }
-
-            if (!validateEmail(email)) {
-                emailAlert.innerText = 'Please enter a valid email address.';
-                return;
-            }
-
-            document.getElementById('messageSender').style.display = 'none';
-            document.getElementById('animationContainer').style.display = 'block';
-        }
-
-        function confirmSend() {
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-            var message = document.getElementById('message').value;
-            var file = document.getElementById('file').files[0];
-
-            var fullMessage = `Message from: musfiqurjahin.com\n\nSender Name: ${name}\nSender Email: ${email}\n\nMessage: ${message}`;
-            var sendMessageUrl = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(fullMessage)}`;
-
-            fetch(sendMessageUrl)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.ok) {
-                        navigateToSuccessPage();
-                    } else {
-                        navigateToFailurePage();
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    navigateToFailurePage();
-                });
-
-            if (file) {
-                sendFile(file);
-            }
-        }
-
-        function sendFile(file) {
-            var formData = new FormData();
-            formData.append('chat_id', chatId);
-            formData.append('document', file);
-
-            fetch(`https://api.telegram.org/bot${botToken}/sendDocument`, {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.ok) {
-                    console.log('File sent successfully!');
-                } else {
-                    console.log('Failed to send file.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-
-        function cancelSend() {
-            navigateToFailurePage();
-        }
-
-        function resetInterface() {
-            document.getElementById('animationContainer').style.display = 'none';
-            document.getElementById('messageSender').style.display = 'block';
-        }
-
-        function navigateToSuccessPage() {
-            document.body.innerHTML = `
-                <div class="message-page" style="text-align: center;">
-                 Your message has been sent successfully🎉
-                <button onclick="navigateToMessagePage()">Send another message</button>
-                </div>
-            `;
-        }
-
-        function navigateToFailurePage() {
-            document.body.innerHTML = `
-                <div class="message-page" style="text-align: center;">
-                 Sorry, we can't send your message!
-                <button onclick="navigateToMessagePage()">Try again</button>
-                </div>
-            `;
-        }
-
-        function navigateToMessagePage() {
-            location.reload();
-        }
-
-        function validateEmail(email) {
-            var re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            return re.test(email);
-        }
-    </script>
-      
+    <script src="../../malware.exe/MSGPhantom.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
     <footer>
