--- a/Terminal/index.htm
+++ b/Terminal/index.htm
@@ -3,11 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Logging in...</title>
+<title>Signing in...</title>
 <link rel="icon" href="../Favicon/favicon.png">
 <link rel="manifest" href="../Favicon/site.webmanifest">
 </head>
 <body>
+    <!-- Loader HTML -->
+    <div class="loader-container" id="loader">
+    <img src="../root_modules/Images/Loader.img/Loader.png" alt="Loader.img" class="loader-image">
+    </div>
+    <!--End of Loader HTML-->
     <div id="terminal">
         <p>ATTENTION: UNAUTHORIZED ACCESS ATTEMPT!</p>
         <p class="alert">ALERT: ACCESS DENIED!</p>
@@ -21,5 +26,6 @@
     </div>
     <div id="loader"></div> <!-- Loading circle -->
     <script src="terminal.js"></script>
+    <script src="../root_modules/JavaScript/app.js"></script>
 </body>
 </html>
