--- a/Terminal/index.htm
+++ b/Terminal/index.htm
@@ -6,6 +6,7 @@
 <title>Signing in...</title>
 <link rel="icon" href="../Favicon/favicon.png">
 <link rel="manifest" href="../Favicon/site.webmanifest">
+<link rel="stylesheet" href="../root_modules/CSS/styles.css">
 </head>
 <body>
     <!-- Loader HTML -->
