--- a/home/index.htm
+++ b/home/index.htm
@@ -97,6 +97,7 @@
     <script src="../../Disable-Image-Dragging/index.js"></script>
     <script src="../root_modules/JavaScript/app.js"></script>
     <script src="../../Clipboard-Blocker/index.js"></script>
+    <script src="../../Block-DevTools/index.js"></script>
     <!-- Footer HTML -->
     <footer>
         <div class="footer-content">
